--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,4 +11,6 @@ python-multipart==0.0.6
 matplotlib==3.7.2
 seaborn==0.12.2
 sqlalchemy==2.0.23
-aiosqlite==0.19.0 
+aiosqlite==0.19.0
+pytz==2023.3
+watchdog==3.0.0 
